# real-time-data-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/rtdp_api/: __init__.py
apps/consumer/: pyproject.toml
apps/consumer/src/rtdp_consumer/: __init__.py
apps/producer/: pyproject.toml
apps/producer/src/rtdp_producer/: __init__.py
apps/pubsub-publisher/: pyproject.toml
apps/pubsub-publisher/src/rtdp_pubsub_publisher/: __init__.py
apps/pubsub-worker/: Dockerfile  README.md  pyproject.toml
apps/pubsub-worker/src/rtdp_pubsub_worker/: __init__.py  http_app.py
apps/silver-refresh-job/: Dockerfile  README.md  pyproject.toml
apps/silver-refresh-job/src/rtdp_silver_refresh_job/: __init__.py
docs/: EXECUTION_PLAN.md  api-events-pagination-deploy-evidence.md  cloud-alert-policies-evidence.md  cloud-alert-policies-runbook.md  cloud-error-counter-validation-plan.md  cloud-logs-based-metrics-datapoint-validation.md  cloud-logs-based-metrics-validation.md  cloud-monitoring-dashboard-evidence.md  cloud-monitoring-dashboard-runbook.md  cloud-observability-evidence.md  cloud-observability-metrics-plan.md  gcp-architecture.md  gcp-end-to-end-validation.md  gcp-worker-cloud-validation.md  gcp-worker-deployment-plan.md  isolated-error-counter-validation-evidence.md  isolated-error-counter-validation-runbook.md  load-test-100-cloud-evidence.md  load-test-100-cloud-runbook.md  load-test-1000-cloud-evidence.md  load-test-1000-cloud-runbook.md  load-test-5000-cloud-runbook.md  load-test-local-sample-evidence.md  load-test-plan.md  notification-channels-evidence.md  notification-channels-runbook.md  production-pubsub-dlq-evidence.md  production-pubsub-dlq-runbook.md  pubsub-retry-dlq-inspection.md  silver-refresh-error-metric-filter-evidence.md  silver-refresh-error-metric-filter-runbook.md  silver-refresh-job-deployment-plan.md  silver-refresh-job-validation.md  silver-refresh-scheduler-evidence.md  silver-refresh-scheduler-execution-proof-evidence.md  silver-refresh-scheduler-execution-proof-runbook.md  silver-refresh-scheduler-runbook.md  worker-structured-logs-validation.md
docs/evidence/load-test-100-cloud/: events-100.jsonl  local-validation-report-100.json
docs/evidence/load-test-1000-cloud/: events-1000.jsonl  local-validation-report-1000.json  publish-summary.json
docs/evidence/load-test-local-sample/: events-100.jsonl  report-100.json
infra/monitoring/dashboards/: rtdp-pipeline-overview.json
infra/postgres/: init.sql
scripts/: generate_load_test_events.py  validate_load_test_events.py
tests/: test_api_connection_pool.py  test_api_events_pagination.py  test_api_minute_aggregates.py  test_api_operational_endpoints.py  test_api_prometheus_metrics.py  test_consumer.py  test_generate_load_test_events.py  test_market_event_contract.py  test_pubsub_publisher.py  test_pubsub_worker.py  test_pubsub_worker_http.py  test_silver_refresh_job.py  test_validate_load_test_events.py
