[project]
name = "rtdp-producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "João Fonseca", email = "jcsf2020@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rtdp-contracts",
    "kafka-python>=2.3.1",
    "pydantic>=2.13.3",
    "python-snappy>=0.7.3",
]

[project.scripts]
rtdp-producer = "rtdp_producer:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
